analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/inlinePropertyWithBackingField.kt

class A {
    inline var some<caret>thing: Int = 0
}
